clusters/apps/AI/ollama/ollama-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: web-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
      - env:
        - name: OLLAMA_MODEL
          value: "deepseek-r1:1.5b"
        - name: OLLAMA_NO_THINKING
          value: "true"
        - name: OLLAMA_SYSTEM_PROMPT
          value: "You are DeepSeek-R1, a reasoning model. Provide direct answers without detailed reasoning steps or tags."
        image: ollama/ollama:latest
        name: ollama
        ports:
          - containerPort: 11434
            protocol: TCP
        resources:
          requests:
            cpu: "2000m"
            memory: "2Gi"
          limits:
            cpu: "4000m"
            memory: "10Gi"
            nvidia.com/gpu: "0"
        volumeMounts:
        - name: ollama-claim0
          mountPath: /root/.ollama
        tty: true
      nodeSelector:
        webui: deepseek
      volumes:
        - name: ollama-claim0
          persistentVolumeClaim:
            claimName: ollama-claim0
