clusters/apps/AI/ollama/ingress-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ollama-route
  namespace: web-ui
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure 
  routes:
    - kind: Rule
      match: Host(`ollama.local.wololoaeyoyo.com`)
      services:
        - name: ollama 
          port: 11434
  tls:
    secretName: local-wololoaeyoyo-com-tls
